testsuite/poke.pkl/preincr-f64-diag-2.pk
/* { dg-do compile } */

var a = 0 as uint<48>;

var b = (.++a); /* { dg-error "invalid operand.*" } */
